tests/golden/openshift/appcat/appcat/10_appcat_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: '-100'
    openshift.io/node-selector: node-role.kubernetes.io/infra=
  labels:
    foo: bar
    name: syn-appcat
    openshift.io/cluster-monitoring: 'true'
  name: syn-appcat
