tests/golden/openshift/appcat/appcat/10_provider_cloudscale.yaml
apiVersion: pkg.crossplane.io/v1
kind: Provider
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: '10'
  labels:
    name: cloudscale
  name: cloudscale
spec:
  package: ghcr.io/vshn/provider-cloudscale/provider:v0.5.0
---
apiVersion: cloudscale.crossplane.io/v1
kind: ProviderConfig
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: '10'
  labels:
    name: cloudscale
  name: cloudscale
spec:
  credentials:
    apiTokenSecretRef:
      name: cloudscale-api-token
      namespace: syn-crossplane
    source: InjectIdentity
---
apiVersion: pkg.crossplane.io/v1alpha1
kind: ControllerConfig
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: '10'
  labels:
    name: cloudscale
  name: cloudscale
spec:
  podSecurityContext: {}
  securityContext: {}
---
apiVersion: v1
data: {}
kind: Secret
metadata:
  annotations: {}
  labels:
    name: cloudscale-api-token
  name: cloudscale-api-token
  namespace: syn-crossplane
stringData:
  CLOUDSCALE_API_TOKEN: t-silent-test-1234/c-green-test-1234/appcat/objectstorage/provider-cloudscale/token
type: Opaque
---
apiVersion: v1
kind: Namespace
metadata:
  annotations: {}
  labels:
    name: syn-provider-cloudscale-secrets
  name: syn-provider-cloudscale-secrets
