tests/golden/openshift/appcat/appcat/10_provider_exoscale.yaml
apiVersion: pkg.crossplane.io/v1
kind: Provider
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: '10'
  labels:
    name: provider-exoscale
  name: provider-exoscale
spec:
  package: ghcr.io/vshn/provider-exoscale:v0.11.4
  runtimeConfigRef:
    name: provider-exoscale
---
apiVersion: exoscale.crossplane.io/v1
kind: ProviderConfig
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: '10'
  labels:
    name: exoscale
  name: exoscale
spec:
  credentials:
    apiSecretRef:
      name: exoscale-api-access
      namespace: syn-crossplane
    source: InjectedIdentity
---
apiVersion: pkg.crossplane.io/v1beta1
kind: DeploymentRuntimeConfig
metadata:
  name: provider-exoscale
spec:
  deploymentTemplate:
    spec:
      selector: {}
      template:
        spec:
          containers:
            - name: package-runtime
              securityContext: {}
          securityContext: {}
          serviceAccountName: provider-exoscale
---
apiVersion: v1
kind: ServiceAccount
metadata:
  annotations: {}
  labels:
    name: provider-exoscale
  name: provider-exoscale
  namespace: syn-crossplane
---
apiVersion: v1
data: {}
kind: Secret
metadata:
  annotations: {}
  labels:
    name: exoscale-api-access
  name: exoscale-api-access
  namespace: syn-crossplane
stringData:
  EXOSCALE_API_KEY: t-silent-test-1234/c-green-test-1234/appcat/provider-exoscale/access-key
  EXOSCALE_API_SECRET: t-silent-test-1234/c-green-test-1234/appcat/provider-exoscale/secret-key
type: Opaque
---
apiVersion: v1
kind: Namespace
metadata:
  annotations: {}
  labels:
    name: syn-provider-exoscale-secrets
  name: syn-provider-exoscale-secrets
