tests/golden/openshift/appcat/appcat/10_stackgres_openshift_operator_ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/node-selector: ''
  labels:
    name: syn-stackgres-operator
    openshift.io/cluster-monitoring: 'true'
    openshift.io/user-monitoring: 'false'
  name: syn-stackgres-operator
